results/SVCOMP/conversational/log-putstatic_getstatic1-2024_03_15_02_36_28.txt
class A {
  //@ public normal_behaviour
  //@ ensures \result == 1;
  public static int i = 1;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:4: error: Method specs may not precede a variable declaration
  public static int i = 1;
                    ^
1 error

class A {
  //@ public normal_behaviour
  //@ ensures \result == 1;
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:4: error: Method specs may not precede a variable declaration
  public static int i;
                    ^
1 error

class A {
  //@ public normal_behaviour
  //@ ensures \result == 1;
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:4: error: Method specs may not precede a variable declaration
  public static int i;
                    ^
1 error

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

class A {
  public static int i;
}
;

class putstatic_getstatic1 {
  //@ ensures \result == true <==> A.i == 999;
  public static boolean f() {
    if(A.i != 1) return false;
    A.i = 999;
    if (A.i != 999)
      return false;
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7:) in method f
    if(A.i != 1) return false;
                 ^
/home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:7: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/putstatic_getstatic1.java:9:
  //@ ensures \result == true <==> A.i == 999;
      ^
2 verification failures

